# metal-rs-test

./: Cargo.toml  README.md
src/: main.rs
