[package]
name = "metal-rs-test"
version = "0.1.0"
authors = ["Ulrich Schreiner <ulrich.schreiner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metal-rs = { git = "https://github.com/ulrichSchreiner/metal-rs" }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
kube = "0.51.0"
kube-runtime = "0.51.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart","native-tls"]